Radioactive: Change name and add maintainer.
Signed-off-by: Gagan Malvi <malvigagan@gmail.com>
Change-Id: I79b94e9e464e1cf3a968053c1399f93c9eb22662

--- a/res/xml/config_center_about_category.xml
+++ b/res/xml/config_center_about_category.xml
@@ -82,7 +82,7 @@
         </Preference>
 
         <Preference
-            android:title="TheAcanthite"
+            android:title="Gagan Malvi"
             android:summary="Project co-ordinator">
         </Preference>
 
@@ -170,6 +170,11 @@
         <Preference
             android:title="Mohamed Arshad"
             android:summary="Redmi 7">
+        </Preference>
+
+        <Preference
+            android:title="Gagan Malvi"
+            android:summary="Redmi Note 4X">
         </Preference>
 
         <Preference
