--- a/res/xml/statusbar_header.xml
+++ b/res/xml/statusbar_header.xml
@@ -64,4 +64,12 @@
             android:defaultValue="0"
             android:dependency="status_bar_custom_header" />
 
+        <org.cesium.config.center.preferences.CustomSeekBarPreference
+            android:key="status_bar_custom_header_height"
+            android:title="@string/status_bar_custom_header_height_title"
+            android:max="100"
+            settings:min="0"
+            android:defaultValue="25"
+            settings:units="dp" />
+
 </PreferenceScreen>
